--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,48 @@
-<div>
-  {{!-- insert dashboard html here --}}
+{{!-- insert dashboard html here --}}
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h2>Notifications</h2>
+      {{#each invitations as |invitation| }}
+      <div class="row mb-4">
+        <div class="col-md-5">
+          <h4>
+            <a href="/invitation/{{group.id}}">{{invitation.group.name}}</a>
+          </h4>
+          <a class="btn btn-primary btn-sm btn-block" href="#" role="button">Accept Invite</a>
+        </div>
+      </div>
+      {{/each}}
+    </div>
+    <div class="col-6">
+      <h2>Your Posts</h2>
+      {{#each posts as |post| }}
+      <div class="row mb-4">
+        <div class="col-md-5">
+          <h4>
+            <a href="/post/{{post.id}}">{{post.title}}</a>
+          </h4>
+          <p>{{format_date post.created}}</p>
+          <p>
+            {{post.content}}
+          </p>
+        </div>
+      </div>
+      {{/each}}
+    </div>
+    <div class="col">
+      <h2>Your Groups</h2>
+      {{#each groups as |group| }}
+      <div class="row mb-4">
+        <div class="col-md-5">
+
+          <button type="button" class="btn btn-primary btn-lg btn-block"><a class="text-white"
+              href="/groups/{{group.id}}">{{group.name}}</a></button>
+        </div>
+      </div>
+      {{/each}}
+    </div>
+  </div>
 </div>
 
 <script src="./js/dashboard.js"></script>
