--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,15 @@
-<div>
-  {{!-- insert homepage html here --}}
+<!-- Displaying Groups -->
+
+{{#each groups as group| }}
+<div class="row mb-4">
+  <div class="col-md-5">
+    <h2>
+      <a href="/api/groups/{{group.id}}">{{group.title}}</a>
+    </h2>
+    <p>{{group.user.username}},{{format_date group.created}}</p>
+    <p>
+      {{group.content}}
+    </p>
+  </div>
 </div>
+{{/each}}
