--- a/views/group.handlebars
+++ b/views/group.handlebars
@@ -2,27 +2,37 @@
   <div class="row">
     <div class="col">
       <h2>Group Members</h2>
-      {{#each members as |member| }}
+      {{#each group as |group| }}
       <!--Def need to change this!!-->
       <div class="row mb-4">
         <div class="col-md-5">
           <h4>
-            <a href="/invitation/{{user.email}}">{{invitation.group.name}}</a>
+            <p>{{group.name}}</p>
           </h4>
-          <a class="btn btn-primary btn-sm btn-block" href="/invite" role="button">Send Invite</a>
+          {{#each group.user_id as |member| }}
+          <p>{{member}}</p>
+        </div>
+      </div>
+      {{/each}}
+      <form class="form new-invitation">
+        <p id="group-id">{{group.id}}</p>
+        <div class="form-group">
+          <label for="textarea"></label>
+          <textarea class="form-control" id="email" placeholder="Enter Email"
+            rows="3"></textarea>
+          <button class="btn btn-primary" type="submit">Invite</button>
         </div>
       </div>
       {{/each}}
     </div>
     <div class="col-6">
-      <h2>Your {{group.name}} Posts</h2>
-      {{#each posts as |post| }}
+      <h2>Posts</h2>
+      {{#each group.post as |post| }}
       <div class="row mb-4">
         <div class="col-md-5">
           <h4>
-            <a href="/post/{{post.id}}">{{post.title}}</a>
+            <p>{{post.title}}</p>>
           </h4>
-          <p>{{format_date post.created}}</p>
           <p>
             {{post.content}}
           </p>
@@ -32,16 +42,18 @@
     </div>
     <div class="col">
       <h2>Create New Post</h2>
-
       <form class="form new-post">
         <div class="form-group">
           <label for="new-post"></label>
-          <input class="form-input" type="text" id="create-group" placeholder=" Title" />
+          <input class="form-input" type="text" id="post-title" placeholder="Title"/>
           <label for="textarea"></label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="What would you like to say"
+          <textarea class="form-control" id="post-content" placeholder="What would you like to say"
             rows="3"></textarea>
           <button class="btn btn-primary" type="submit">POST</button>
         </div>
       </form>
     </div>
   </div>
+
+
+<script src="./js/dashboard.js"></script>
