--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,15 +1,11 @@
 <!-- Displaying Posts -->
 
-{{#each posts as |post| }}
+{{#each groups as |group| }}
 <div class="row mb-4">
   <div class="col-md-5">
     <h2>
-      <a href="/post/{{post.id}}">{{post.title}}</a>
+      <a href="/group/{{group.id}}">{{group.name}}</a>
     </h2>
-    <p>{{post.user.username}},{{format_date post.created}}</p>
-    <p>
-      {{post.content}}
-    </p>
   </div>
 </div>
 {{/each}}
