--- a/views/loginRegister.handlebars
+++ b/views/loginRegister.handlebars
@@ -24,7 +24,7 @@
     <form class="form signup-form">
       <div class="form-group">
         <label for="name-signup">Username:</label>
-        <input class="form-input" type="text" id="name-signup" />
+        <input class="form-input" type="text" id="username-signup" />
       </div>
       <div class="form-group">
         <label for="email-signup">Email:</label>
@@ -35,7 +35,7 @@
         <input class="form-input" type="password" id="password-signup" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">Create Profile</button>
+        <button class="btn btn-primary" type="submit">Create Account</button>
       </div>
     </form>
   </div>
