--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,16 +1,16 @@
 <!-- Displaying Posts -->
 
-{{#each posts as |post| }}
-<div class="row mb-4">
-  <div class="col-md-5">
-    <h2>
-      <a href="/post/{{post.id}}">{{post.title}}</a>
-    </h2>
-    <p>{{post.user.username}},{{format_date post.created}}</p>
-    <p>
-      {{post.content}}
-    </p>
-  </div>
-</div>
-{{/each}}
+<div class="jumbotron jumbotron-fluid">
+            <div class="container">
+              <h1 class="display-4">Recent Posts</h1>
+              {{#each groups as |group| }}
+              <div class="card" >
+                <div class="card-header">
+                    <h2> <a href="/post/{{group.id}}">{{group.name}}</a></h2>
+                </div>
+            </div>
+            {{/each}}
+              
+            </div>
+          </div>
 
