uupdated baseline views, more cleaning up to do.

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,7 +2,7 @@
 
 <div class="jumbotron jumbotron-fluid">
             <div class="container">
-              <h1 class="display-4">Recent Posts</h1>
+              <h1 class="display-4">Welcome to Your Forum</h1>
               {{#each groups as |group| }}
               <div class="card" >
                 <div class="card-header">
