--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,12 +6,10 @@
               {{#each groups as |group| }}
               <div class="card" >
                 <div class="card-header">
-                    <h2> <a href="/post/{{group.id}}">{{group.name}}</a></h2>
+                    <h2> <a href="/group/{{group.id}}">{{group.name}}</a></h2>
                 </div>
             </div>
             {{/each}}
               
             </div>
           </div>
-
-
