--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,9 +31,7 @@
                                     <a class="nav-link text-primary" href="/dashboard">Dashboard</a>
                                 </li>
                                 <li class="nav-item">
-
-                                    <a class="nav-link text-primary" href="/logout">Logout</a>
-
+                                    <a class="nav-link text-primary" id="logout" href="/logout">Logout</a>
                                 </li>
                                 {{else}}
                                 <li class="nav-item">
@@ -55,7 +53,7 @@
     
     <!-- Render script for logged in users only -->
     {{#if logged_in}}
-    <script src="/js/logout.js"></script>
+    <script src="./js/logout.js"></script> 
     {{/if}}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
