--- a/views/group.handlebars
+++ b/views/group.handlebars
@@ -1,4 +1,4 @@
-{{!-- add topic section --}}\
+{{!-- add topic section --}}
 {{!-- create post section and add posts section in a partial --}}
 
 <div class="container">
