--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -5,13 +5,7 @@
             <h2>Notifications</h2>
             {{#each invitations as |invitation| }}
             <div class="card" style="width: 18rem;">
-
-                <h5>
-                    {{invitation.group.name}}
-                </h5>
-                <a class="btn btn-primary btn-sm btn-block" href="/acceptInvite" role="button">Accept Invite</a>
-
-
+                <a class="btn btn-primary btn-sm btn-block invitaiton" data-id="{{invitation.id}}" href="/dashboard" role="button">Accept Invite</a>
             </div>
             {{/each}}
         </div>
@@ -30,9 +24,6 @@
                             <p class="card-text">{{post.content}}</p>
 
                         </div>
-                        <div class="card-footer text-muted">
-                            <p>{{format_date post.created}}</p>
-                        </div>
                     </div>
                     {{/each}}
 
@@ -43,9 +34,8 @@
           
             <h2>Your Groups</h2>
             {{#each mermberships as |group| }}
-            <div class="row mb-4">
+            <div class="row mb4">
                 <div class="col-md-5">
-
                     <button type="button" class="btn btn-primary btn-lg btn-block"><a class="text-white"
                             href="/groups/{{group.id}}">{{group.name}}</a></button>
                 </div>
