--- a/views/group.handlebars
+++ b/views/group.handlebars
@@ -20,15 +20,20 @@
         <h2>Topics</h2>
         <div class="btn-group-vertical">
           {{#each topics as |topic| }}
-          <a class="btn btn-primary" href="#" role="button">{{topic.name}}</a>
+          <button data-topic-id="{{topic.id}}" class="btn btn-primary" href="#" role="button">{{topic.name}}</button>
           {{/each}}
         </div>
     </div>
+
+    {{#if }}
 
     <div class="col-6">
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-6">Your posts in {{name}}</h1>
+
+
+
           {{#each posts as |post| }}
           <div class="card">
             <div class="card-header">
