--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,7 +31,7 @@
                                     <a class="nav-link text-primary" href="/dashboard">Dashboard</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-primary" id="logout" href="/logout">Logout</a>
+                                    <a class="nav-link text-primary" id="logout" href="/">Logout</a>
                                 </li>
                                 {{else}}
                                 <li class="nav-item">
