Topic route handler to display Posts.

--- a/views/group.handlebars
+++ b/views/group.handlebars
@@ -20,7 +20,7 @@
         <h2>Topics</h2>
         <div class="btn-group-vertical">
           {{#each topics as |topic| }}
-          <a class="btn btn-primary" href="#" role="button">{{topic.name}}</a>
+          <a class="btn btn-primary" href="/group/{{topic.group_id}}/topic/{{topic.id}}" role="button">{{topic.name}}</a>
           {{/each}}
         </div>
     </div>
@@ -39,7 +39,7 @@
 
             </div>
             <div class="card-footer text-muted">
-              <p>{{format_date post.created}}</p>
+              <p>{{post.createdAt}}</p>
             </div>
           </div>
           {{/each}}
