--- a/views/group.handlebars
+++ b/views/group.handlebars
@@ -7,7 +7,7 @@
       <h2>Group Members</h2>
       <div class="btn-group-vertical">
         {{#each memberships as |member| }}
-        <a class="btn btn-primary" href="#" role="button">{{member.username}}</a>
+        <h1>{{member.username}}</h1>
       </div>
       {{/each}}
       <form class="form new-invitation">
