--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,7 +31,7 @@
                                     <a class="nav-link text-primary" href="/dashboard">Dashboard</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-primary" id="logout" href="/">Logout</a>
+                                    <a class="nav-link text-primary" id="logout" href="#" onclick="logout()">Logout</a>
                                 </li>
                                 {{else}}
                                 <li class="nav-item">
@@ -53,7 +53,10 @@
     
     <!-- Render script for logged in users only -->
     {{#if logged_in}}
-    <script src="./js/logout.js"></script> 
+        {{!-- This will set the script path based on the 'scriptPath' value provided. This value is set in homeRoutes.js based on the relative depth
+                of the document.location at the time of rendering a new view.
+            For example, if we're at the root, use './js/logout.js'. If we're at the group page (/group/:id), use '../js/logout.js' --}}
+        <script src="{{#if scriptPath}}{{scriptPath}}{{else}}./{{/if}}js/logout.js"></script> 
     {{/if}}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
