--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,15 +1,20 @@
 <!-- Displaying Posts -->
 
+<div class="d-flex p-2 justify-content-center">
+  
 <div class="jumbotron jumbotron-fluid">
+  <h1>Welcome to Your Forum</h1>
             <div class="container">
-              <h1 class="display-4">Welcome to Your Forum</h1>
+              
+              <h4>Check out some groups!</h4>
               {{#each groups as |group| }}
-              <div class="card" >
-                <div class="card-header">
-                    <h2> <a href="/group/{{group.id}}">{{group.name}}</a></h2>
+              <div class="card" style="width: 16rem;" >
+                <div class="card-header text-center">
+                    <h2> <a class="text-light" href="/group/{{group.id}}">{{group.name}}</a></h2>
                 </div>
             </div>
             {{/each}}
               
             </div>
           </div>
+</div>
